# qlever_stub

./: CMakeLists.txt  main.cpp  templates.h
docker/: devcontainer.json  develop.dockerfile
